[gd_scene load_steps=5 format=3 uid="uid://dtb3hajc3rg1e"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_etvjp"]
[ext_resource type="Texture2D" uid="uid://bpupngqc7p54j" path="res://assets/graphics/gameover.png" id="1_ke6ap"]
[ext_resource type="FontFile" uid="uid://c3r2svfygh8wd" path="res://assets/font/PublicPixel-E447g.ttf" id="2_apdul"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fsmqv"]
bg_color = Color(0, 0, 0, 0)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_etvjp")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 32

[node name="PointsLabel" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("2_apdul")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/GameOverBox"]
layout_mode = 2
texture = ExtResource("1_ke6ap")

[node name="Panel" type="Panel" parent="MarginContainer/GameOverBox"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_fsmqv")

[node name="Button" type="Button" parent="MarginContainer/GameOverBox/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.62
anchor_right = 0.5
anchor_bottom = 0.62
offset_left = -95.0
offset_top = -17.0
offset_right = 95.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_apdul")
theme_override_font_sizes/font_size = 26
text = "RESTART"

[node name="HighScoreLabel" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_apdul")
text = "0"

[connection signal="pressed" from="MarginContainer/GameOverBox/Panel/Button" to="." method="_on_button_pressed"]
